# multivariate-regression

./: .gitignore  README.md  pyproject.toml
models/: scaler.pkl
notebooks/: eda.ipynb
