[project]
name = "multivariate-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristian Urrea",email = "calzateu@eafit.edu.co"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "ydata-profiling (>=4.16.1,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.5,<=3.10)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.4,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
